# PID_MS

./: grafic.m  main.m  motor_params.m  pid_tuned_results.mat  position_pid_model.slx  position_pid_model.slxc  start_all.m
MKTI/: tp_i2.vsd
MKTI/eng_power/: pe3_001.docx  sp_001.docx  teodolit_pwr-pcb_2024_mw_b.pcb  teodolit_pwr-pcb_2024_mw_b_rezonit_blank_zakaza.xls  teodolit_pwr-sch_2024_mw_b.sch  vp_001.docx
MKTI/imported_board/: mkti_2023c1.pcb  mkti_2023c1.sch  mkti_2023c1_rezonit_blank_zakaza.xls  pe3_015.docx  sp_015.docx  vp_015.docx
MKTI/imported_board/tag/: mkti_2023c1.pcb  mkti_2023c1.sch  pe3_005.docx  sp_005.docx  vp_005.docx
MKTI/sim_eng/: gerber_v2.7z  list_motor.xlsx  motor_mgn_v2_rezonit_blank_zakaza.xls  motor_mng_v2.pcb  motor_mng_v2.sch  motor_mng_v3.pcb  motor_mng_v3.sch  pe3_003.docx  sp_003.docx  vp_003.docx
MKTI/sys_aut_cont/: git.txt
MKTI/sys_aut_cont/foc/foc/: foc.m  foc_mkti.slx  untitled.slx.autosave  untitled.slx.original  untitled.slxc
MKTI/sys_aut_cont/foc_model-matlab/foc_model-matlab/: foc_model.slx  foc_model.slxc
MKTI/sys_aut_cont/vector_model_mkti/: control_analysis.m  control_design.m  open_loop_analysis.m  open_loop_model.slx
MKTI/САУ/foc_model-matlab/foc_model-matlab/: data.xlsx  foc_script.asv  foc_script.m  matlab.mat
MKTI/САУ/vector_model_mkti/: data.m  main_model.slx
MKTI/САУ/vector_model_mkti/docs/: vector_model_mkti.docx
MKTI/САУ/Литература/: Векторное управление.docx  Применение 1921ВК01Т.docx  Способы отладки ПО.docx  Ссылки.txt
MKTI/САУ/Литература/MatLAB/: simulink.chm  Егоренков Фрадков Харламов - Matlab.djvu
files/: create_model_correct.m  grafic.m  pid_autotuner_optimization.m  pid_autotuner_step.m  pid_tuned_results.mat  position_pid_model.slx.autosave
mobile-theodolite-contol-board/: .cproject  .gitmodules  .mxproject  .project  STM32F407ZETX_FLASH.ld  STM32F407ZETX_RAM.ld  mkti Debug.launch  mkti.ioc
mobile-theodolite-contol-board/Core/Inc/: FreeRTOSConfig.h  assert.h  main.h  rng.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h  wwdg.h
mobile-theodolite-contol-board/Core/Src/: adc.c  dma.c  freertos.c  gpio.c  main.c  rng.c  rtc.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  system_stm32f4xx.c  tim.c  usart.c  wwdg.c
mobile-theodolite-contol-board/LWIP/App/: lwip.c
mobile-theodolite-contol-board/USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_desc.h
mobile-theodolite-contol-board/firmware/: .gitignore  CMakeLists.txt  Jenkinsfile
mobile-theodolite-contol-board/firmware/src/firmware/data/: data.h
mobile-theodolite-contol-board/firmware/src/firmware/errors/: errors.h
mobile-theodolite-contol-board/firmware/src/firmware/interfaces/: interfaces.h
mobile-theodolite-contol-board/firmware/src/firmware/link_level/: CMakeLists.txt  crc16.cpp  crc16.h  uart_link.cpp  uart_link.h
mobile-theodolite-contol-board/firmware/src/firmware/protobuf_messages_processor/: protobuf_messages_processor.h
mobile-theodolite-contol-board/firmware/src/firmware/queue/: fast_queue.h  queue.h  queue_interface.h
mobile-theodolite-contol-board/firmware/src/firmware/ring_buffer/: CMakeLists.txt  ring_buffer.c  ring_buffer.h
mobile-theodolite-contol-board/firmware/test/: CMakeLists.txt
mobile-theodolite-contol-board/firmware/test/ring_buffer/: CMakeLists.txt  RingBuffer_Test.cpp
mobile-theodolite-contol-board/firmware/test/uart_link/: CMakeLists.txt  uart_link_test.cpp
mobile-theodolite-contol-board/src/theodolite/logic/pc_protocol/: CMakeLists.txt  commands.cpp  commands.h  commands_interface.h  mkti_commands.h  protocol_fabric.cpp  protocol_processor.cpp  protocol_processor.h  protocol_processor_interface.h  protocol_task.cpp  protocol_task.h
mobile-theodolite-contol-board/src/theodolite/logic/pc_protocol/serial_protocol/: serial_protocol.cpp  serial_protocol.h
mobile-theodolite-contol-board/src/theodolite/logic/test/: CMakeLists.txt
mobile-theodolite-contol-board/src/theodolite/logic/test/axis_mover/: CMakeLists.txt  axis_mover_test.cpp  sw_timer_mock.h
mobile-theodolite-contol-board/src/theodolite/logic/test/bootloader/: bootloader_test.cpp
mobile-theodolite-contol-board/src/theodolite/logic/test/camera_protocol/: CMakeLists.txt  camera_tst.cpp  camera_tst.h
mobile-theodolite-contol-board/src/theodolite/logic/test/encoder/: CMakeLists.txt  encoder_tst.cpp
mobile-theodolite-contol-board/src/theodolite/logic/test/encoder_board/: CMakeLists.txt  encoder_board_tst.cpp
mobile-theodolite-contol-board/src/theodolite/logic/test/encoder_board_protocol/: CMakeLists.txt  encoder_mock.h  encoder_protocol_tst.cpp  inclinometer_mock.h
mobile-theodolite-contol-board/src/theodolite/logic/test/manual_controller/: CMakeLists.txt  manual_controller_test.cpp
mobile-theodolite-contol-board/src/theodolite/logic/test/move_controller/: CMakeLists.txt  move_controller_mock.h  move_controller_test.cpp
mobile-theodolite-contol-board/src/theodolite/logic/test/pc_protocol/: CMakeLists.txt  axis_mover_mock.h  commands_mock.h  connection.h  gpio_mock.h  pid_reg_mock.h  protocol_parser_tst.cpp
mobile-theodolite-contol-board/src/theodolite/logic/test/pwm/: CMakeLists.txt  pwm_generator_mock.h  pwm_test.cpp  pwm_test.h
mobile-theodolite-contol-board/src/theodolite/logic/test/ramp_control/: CMakeLists.txt  ramp_control_test.cpp
mobile-theodolite-contol-board/src/theodolite/logic/test/serial_protocol/: serial_protocol_test.cpp
mobile-theodolite-contol-board/src/theodolite/logic/test/software_uart/: CMakeLists.txt  soft_uart_tst.cpp  soft_uart_tst.h
mobile-theodolite-contol-board/src/theodolite/logic/test/test_bench/: axis_mover_tester.cpp  axis_mover_tester.h
mobile-theodolite-contol-board/src/theodolite/logic/test/test_interface/: test_interface.h
mobile-theodolite-contol-board/src/theodolite/peripheral/: critical_section.c  critical_section.h  hal.h  hardware.h  timersconfig.h  uart.h
slprj/sim/varcache/position_pid_model/: checksumOfCache.mat  varInfo.mat
(+263 files in other folders)
